--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "karma-jasmine": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "lost": "^6.6.2",
     "node-libs-browser": "^0.5.2",
+    "postcss-cssnext": "^2.1.0",
+    "postcss-loader": "^0.6.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
@@ -32,10 +35,13 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "blueimp-md5": "^1.1.1",
     "classnames": "^2.1.3",
     "lodash": "^3.10.0",
+    "moment": "^2.10.6",
     "react": "^0.13.3",
-    "react-mixin": "^2.0.1"
+    "react-mixin": "^2.0.1",
+    "react-router": "^1.0.0-rc3"
   },
   "scripts": {
     "lint": "eslint app",
