--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ dist
 node_modules
 npm-debug.log
 /webpack/lib
-/settings/devel.json
-/settings/prod.json
-/settings/stage.json
+settings/devel.json
+settings/prod.json
+settings/stage.json
