--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.10.6",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-helmet": "^1.1.5",
     "react-mailto": "^0.3.0",
     "react-mixin": "^2.0.1",
     "react-router": "^1.0.0-rc3"
