--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-mailto": "^0.3.0",
     "react-mixin": "^2.0.1",
     "react-router": "^1.0.0-rc3",
-    "react-sparklines": "^1.3.0"
+    "react-sparklines": "^1.3.0",
+    "react-svg-piechart": "^1.1.0"
   },
   "scripts": {
     "lint": "eslint app",
