--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-mixin": "^2.0.1",
     "react-router": "^1.0.0-rc3",
     "react-sparklines": "^1.3.0",
-    "react-svg-piechart": "^1.1.0"
+    "react-svg-piechart": "^1.1.0",
+    "react-typeahead": "^1.1.5"
   },
   "scripts": {
     "lint": "eslint app"
