--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "blueimp-md5": "^1.1.1",
     "classnames": "^2.1.3",
+    "history": "^1.12.0",
     "lodash": "^3.10.0",
     "moment": "^2.10.6",
     "react": "^0.14.0",
