--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "react-sparklines": "^1.3.0",
     "react-stripe-checkout": "^1.7.2",
     "react-svg-piechart": "^1.1.0",
-    "react-typeahead": "^1.1.5",
-    "stripe": "^4.1.0"
+    "react-typeahead": "^1.1.5"
   },
   "scripts": {
     "lint": "eslint app"
